--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,19 +29,19 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.antlr-2.7.7.jar=web\\WEB-INF\\lib\\hibernate\\antlr-2.7.7.jar
-file.reference.byte-buddy-1.8.17.jar=web\\WEB-INF\\lib\\hibernate\\byte-buddy-1.8.17.jar
-file.reference.classmate-1.3.4.jar=web\\WEB-INF\\lib\\hibernate\\classmate-1.3.4.jar
-file.reference.dom4j-2.1.1.jar=web\\WEB-INF\\lib\\hibernate\\dom4j-2.1.1.jar
-file.reference.hibernate-commons-annotations-5.0.4.Final.jar=web\\WEB-INF\\lib\\hibernate\\hibernate-commons-annotations-5.0.4.Final.jar
-file.reference.hibernate-core-5.3.7.Final.jar=web\\WEB-INF\\lib\\hibernate\\hibernate-core-5.3.7.Final.jar
-file.reference.jandex-2.0.5.Final.jar=web\\WEB-INF\\lib\\hibernate\\jandex-2.0.5.Final.jar
-file.reference.javassist-3.23.1-GA.jar=web\\WEB-INF\\lib\\hibernate\\javassist-3.23.1-GA.jar
-file.reference.javax.activation-api-1.2.0.jar=web\\WEB-INF\\lib\\hibernate\\javax.activation-api-1.2.0.jar
-file.reference.javax.persistence-api-2.2.jar=web\\WEB-INF\\lib\\hibernate\\javax.persistence-api-2.2.jar
-file.reference.jboss-logging-3.3.2.Final.jar=web\\WEB-INF\\lib\\hibernate\\jboss-logging-3.3.2.Final.jar
-file.reference.jboss-transaction-api_1.2_spec-1.1.1.Final.jar=web\\WEB-INF\\lib\\hibernate\\jboss-transaction-api_1.2_spec-1.1.1.Final.jar
-file.reference.postgresql-42.2.5.jar=web\\WEB-INF\\lib\\postgresql\\postgresql-42.2.5.jar
+file.reference.antlr-2.7.7.jar=web/WEB-INF/lib/hibernate/antlr-2.7.7.jar
+file.reference.byte-buddy-1.8.17.jar=web/WEB-INF/lib/hibernate/byte-buddy-1.8.17.jar
+file.reference.classmate-1.3.4.jar=web/WEB-INF/lib/hibernate/classmate-1.3.4.jar
+file.reference.dom4j-2.1.1.jar=web/WEB-INF/lib/hibernate/dom4j-2.1.1.jar
+file.reference.hibernate-commons-annotations-5.0.4.Final.jar=web/WEB-INF/lib/hibernate/hibernate-commons-annotations-5.0.4.Final.jar
+file.reference.hibernate-core-5.3.7.Final.jar=web/WEB-INF/lib/hibernate/hibernate-core-5.3.7.Final.jar
+file.reference.jandex-2.0.5.Final.jar=web/WEB-INF/lib/hibernate/jandex-2.0.5.Final.jar
+file.reference.javassist-3.23.1-GA.jar=web/WEB-INF/lib/hibernate/javassist-3.23.1-GA.jar
+file.reference.javax.activation-api-1.2.0.jar=web/WEB-INF/lib/hibernate/javax.activation-api-1.2.0.jar
+file.reference.javax.persistence-api-2.2.jar=web/WEB-INF/lib/hibernate/javax.persistence-api-2.2.jar
+file.reference.jboss-logging-3.3.2.Final.jar=web/WEB-INF/lib/hibernate/jboss-logging-3.3.2.Final.jar
+file.reference.jboss-transaction-api_1.2_spec-1.1.1.Final.jar=web/WEB-INF/lib/hibernate/jboss-transaction-api_1.2_spec-1.1.1.Final.jar
+file.reference.postgresql-42.2.5.jar=web/WEB-INF/lib/postgresql/postgresql-42.2.5.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -108,6 +108,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=HibernateJSF2.war
+war.name=WebLibrary.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
